--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,10 @@
 <div class="container">
+  <div class="text-center">
+    <%= link_to "Add a new restaurant", new_restaurant_path, class: "btn btn-primary" %>
+  </div>
+</div>
+
+<div class="container">
   <% @restaurants.each do |restaurant| %>
     <div class="row my-4 bg-light">
       <div class="col">
@@ -6,12 +12,8 @@
         <p><%= restaurant.name %></p>
         <p><%= restaurant.address %></p>
         <p><%= restaurant.category %></p>
+        <p><%= restaurant.phone_number %></p>
       </div>
     </div>
   <% end %>
-</div>
-
-<div class="d-flex justify-content-between">
-  <%= link_to "Add a new restaurant", new_restaurant_path, class: "btn btn-primary" %>
-  </div>
 </div>
