--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,42 @@
+<%= link_to "Home page", restaurants_path %>
+
 <div class="container">
   <h2><%= @restaurant.name %></h2>
   <p><%= @restaurant.address %></p>
   <p><%= @restaurant.category %></p>
-  <%= link_to "Home page", restaurants_path %>
 </div>
 
 <p><strong>Reviews</strong></p>
-<ul class="list-group">
-  <% @restaurant.reviews.each do |review| %>
-    <li class="list-group-item"><%= review.content %></li>
-  <% end %>
-</ul>
+
+<div class="row">
+  <div class="col-sm-6">
+    <ul class="list-group">
+      <% @restaurant.reviews.each do |review| %>
+        <li class="list-group-item"><%= review.content %></li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="col-sm-1 d-flex justify-content-center align-items-center">
+    <ul class="list-group">
+      <% @restaurant.reviews.each do |review| %>
+        <li class="list-group-item"><%= review.rating %></li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="col-sm-1 d-flex justify-content-center align-items-center">
+    <ul class="list-group">
+      <% @restaurant.reviews.each do |review| %>
+        <li class="list-group-item">
+          <%= link_to "Delete", review_path(review), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
 <br>
+
+<%# <%= link_to "Add a review", new_restaurant_review_path(@restaurant) %>
+<%= render "restaurants/form", review: @review %>
